--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -349,9 +349,9 @@
  gov_coastal_government:0 "沿岸政府"
  scaling_with_estate_influence_tt:0 "§Y影響度に比例§!\n§Y100%§!の影響度でこの特権は以下の効果を与えます："
  scaling_with_estate_loyalty_tt:0 "§Y忠誠度に比例§!\n§Y100%§!の忠誠度でこの特権は以下の効果を与えます："
- when_loyal_tt:0 "§GWhen Loyal (above 60%) and 100% Influence§!:"
- when_neutral_tt:0 "§YWhen Neutral (between 30% and 60%) and 100% Influence§!:"
- when_disloyal_tt:0 "§RWhen Disloyal (under 30%) and 100% Influence§!:"
+ when_loyal_tt:0 "§G忠実（忠誠度60%以上）かつ影響度100%のとき§!："
+ when_neutral_tt:0 "§Y中立（忠誠度30%～60%）かつ影響度100%のとき§!："
+ when_disloyal_tt:0 "§R不忠（忠誠度30%以下）かつ影響度100%のとき§!："
  UNTIL_REVOKED:0 "廃止されるまで"
  estate_church_clerical_education_loyal:0 "宗教的教育"
  estate_church_clerical_education_neutral:0 "宗教的教育"
