--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -5,7 +5,7 @@
  at_peace_revolutionary:0 "平和な革命国家"
  mechanic_revolutionary_yes:1 "この国は§Y革命国家§!であり、旧秩序に反対している！"
  revolutionary_guard_regiment:0 "革命衛兵"
- DIP_LAND_FORCE:0 "Total amount of Soldiers of $NAME|Y$"
+ DIP_LAND_FORCE:0 "$NAME|Y$の総兵数"
  DIP_NAVAL_FORCE:0 "$NAME|Y$の総艦船数"
  SPY_ARMY_ENTRY:0 "$WHERE$に$NUM$"
  SPY_NAVY_ENTRY:0 "$WHERE$に$NUM$隻の船"
@@ -317,7 +317,7 @@
  ASSIGN_HEIR_TITLE:0 "新しい後継者を指名"
  ASSIGN_HEIR_DESC:0 "新しい後継者を指名すると$PRESTIGE|Y$の威信と$LEGITIMACY|Y$の正統性がかかります！本当によろしいですか？"
  ASSIGN_HEIR_ALREADY_HEIR:0 "すでに後継者がいます。"
- ASSIGN_HEIR_TT:3 "§YIntroduce New Heir§!\nSpend $LEGITIMACY|Y$ Legitimacy and $PRESTIGE|Y$ Prestige to get a new heir!"
+ ASSIGN_HEIR_TT:3 "§Y新しい後継者を指名§!\n$LEGITIMACY|Y$の正統性と$PRESTIGE|Y$の威信を消費して新しい後継者を得ます！"
  ASSIGN_HEIR_NOT_MONARCHY:0 "君主制のみが新しい後継者を指名できます！"
  ASSIGN_HEIR_NOT_HEIRS:0 "あなたの政体では後継者を指名できません！"
  ASSIGN_HEIR_AT_WAR:0 "戦争中は、新しい後継者を指名できません！"
@@ -813,7 +813,7 @@
  DURATION:0 "期間"
  MIL_UPKEEP_WAR_TAXES:1 "戦争税：$COST|+$\n"
  WAR_TAXES_TOOLTIP_START:0 "戦争中に以下が与えられます：\n"
- WAR_TAXES_TOOLTIP_COST:1 "Will cost $COST|Y$£mil£ per month while at war until cancelled.\nBase Cost: $VAL|Y$\n$MODIFIERS$"
+ WAR_TAXES_TOOLTIP_COST:1 "中止されるまで戦争中は毎月$COST|Y$£mil£がかかります。\n基本コスト：$VAL|Y$\n$MODIFIERS$"
  ALLY_FORCES_UNKNOWN:0 "???"
  ALLY_FORCE_ENTRY:0 "$ADJ$$TYPE$：$AMOUNT|Y0$\n"
  ALLY_FORCE_TOTAL_ENTRY:0 "$COUNTRY$は$DEPLOYED|0Y$を配備し、$MANPOWER|0Y$を予備として持っています。\n"
@@ -1028,8 +1028,8 @@
  force_peasant_republic:0 "農民による支配を強制"
  po_reintegrate_into_hre:0 "帝国への再編入"
  take_capital_force_join_hre_no_gain_desc:0 "$CONTINENT|Y$にあり、帝国に加盟できる$COUNTRY|Y$およびその従属国の州がすべて、帝国の一部となります。"
- estate_privileges_and_agendas_events.3.l:1 "The Proposal of the [Root.GetJanissariesName]"
- estate_privileges_and_agendas_events.3.m:1 "The Proposal of the [Root.GetEunuchsName]"
+ estate_privileges_and_agendas_events.3.l:1 "[Root.GetJanissariesName]の提案"
+ estate_privileges_and_agendas_events.3.m:1 "[Root.GetEunuchsName]の提案"
  estate_privileges_and_agendas_events.6.t:0 "直轄地の売却"
  estate_privileges_and_agendas_events.6.desc:0 "[Root.GovernmentName]の国庫は悲惨な状況にあります。幸いなことに、各階級は、私たちの土地の一部を購入することに非常に興味を持っています。私たちの大切な財産を誰に売ればいいのでしょうか？"
  estate_privileges_and_agendas_events.6.a:0 "直轄地を皆に等しく売る。"
@@ -1044,8 +1044,8 @@
  estate_privileges_and_agendas_events.6.j:0 "[Root.GetMarathaOrFallbackName]に売ろう。"
  estate_privileges_and_agendas_events.6.k:0 "[Root.GetVaisyasOrFallbackName]に売ろう。"
  estate_privileges_and_agendas_events.6.l:0 "[Root.GetJainsOrFallbackName]に売ろう。"
- estate_privileges_and_agendas_events.6.m:1 "Sell it to the [Root.GetJanissariesOrFallbackName]"
- estate_privileges_and_agendas_events.6.n:1 "Sell it to the [Root.GetEunuchsOrFallbackName]"
+ estate_privileges_and_agendas_events.6.m:1 "[Root.GetJanissariesOrFallbackName]に売ろう。"
+ estate_privileges_and_agendas_events.6.n:1 "[Root.GetEunuchsOrFallbackName]に売ろう。"
  estate_privileges_and_agendas_events.7.t:0 "直轄地の接収"
  estate_privileges_and_agendas_events.7.desc:0 "王室は[Root.GetAdjective]の土地に対する支配力を強化する必要があります。今こそ、有力な階級の土地を自分たちのものにする時です。誰から土地を奪うべきでしょうか？"
  estate_privileges_and_agendas_events.7.a:0 "直轄地を皆から等しく接収する。"
@@ -1060,8 +1060,8 @@
  estate_privileges_and_agendas_events.7.j:0 "[Root.GetMarathaOrFallbackName]から接収しよう。"
  estate_privileges_and_agendas_events.7.k:0 "[Root.GetVaisyasOrFallbackName]から接収しよう。"
  estate_privileges_and_agendas_events.7.l:0 "[Root.GetJainsOrFallbackName]から接収しよう。"
- estate_privileges_and_agendas_events.7.m:1 "Seize it from the [Root.GetJanissariesOrFallbackName]"
- estate_privileges_and_agendas_events.7.n:1 "Seize it from the [Root.GetEunuchsOrFallbackName]"
+ estate_privileges_and_agendas_events.7.m:1 "[Root.GetJanissariesOrFallbackName]から接収しよう。"
+ estate_privileges_and_agendas_events.7.n:1 "[Root.GetEunuchsOrFallbackName]から接収しよう。"
  MODIFIER_STABILITY_COST_TO_DECLARE_WAR:0 "宣戦布告時の安定度低下"
  MONOPOLY_INCOME_CLOTH_SILK_DESC:0 "布または絹生産から"
  MONOPOLY_INCOME_IRON_AND_COPPER_DESC:0 "鉄または銅生産から"
@@ -1084,28 +1084,28 @@
  MONOPOLY_INCOME_TROPICAL_WOOD_DESC:0 "熱帯木材生産から。"
  MONOPOLY_INCOME_COAL_DESC:0 "石炭生産から。"
  MONOPOLY_INCOME_CLOVES_DESC:0 "クローブ生産から。"
- ASSIGN_HEIR_TT_PERSONAL_UNIONS:0 "Since our religion allows for Personal Unions all nations engaged in a §Yroyal marriage§! with us will be granted a '§YRestoration of Union§!' Casus Belli"
- estate_privileges_and_agendas_events.3.n: "The Proposal of the [Root.GetQizilbashName]"
- estate_privileges_and_agendas_events.3.o:1 "The Proposal of the [Root.GetGhilmanName]"
- estate_privileges_and_agendas_events.6.o:0 "Sell it to the [Root.GetQizilbashOrFallbackName]"
- estate_privileges_and_agendas_events.6.p:0 "Sell it to the [Root.GetGhulamsOrFallbackName]"
- estate_privileges_and_agendas_events.7.o:0 "Seize it from the [Root.GetQizilbashOrFallbackName]"
- estate_privileges_and_agendas_events.7.p:0 "Seize it from the [Root.GetGhulamsOrFallbackName]"
- estate_privileges_and_agendas_events.8.t:0 "The Grand Vizier of [Root.GetName]"
- estate_privileges_and_agendas_events.8.desc:0 "The bureaucracy of the state is only as good as its Grand Vizier, the highest advisor of the court. The time has come for us to elect one of our estates as our new Grand Vizier."
- estate_privileges_and_agendas_events.8.a:0 "Select a Grand Vizier from the [Root.GetChurchOrFallbackName]"
- estate_privileges_and_agendas_events.8.b:0 "Select a Grand Vizier from the [Root.GetBurghersOrFallbackName]"
- estate_privileges_and_agendas_events.8.c:0 "Select a Grand Vizier from the [Root.GetNobilityOrFallbackName]"
- estate_privileges_and_agendas_events.8.d:0 "Select a Grand Vizier from the [Root.GetDhimmiOrFallbackName]"
- estate_privileges_and_agendas_events.8.e:0 "Select a Grand Vizier from the [Root.GetCossacksOrFallbackName]"
- estate_privileges_and_agendas_events.8.f:0 "Select a Grand Vizier from the [Root.GetTribesOrFallbackName]"
- estate_privileges_and_agendas_events.8.g:0 "Select a Grand Vizier from the [Root.GetBrahminsOrFallbackName]"
- estate_privileges_and_agendas_events.8.h:0 "Select a Grand Vizier from the [Root.GetRajputOrFallbackName]"
- estate_privileges_and_agendas_events.8.i:0 "Select a Grand Vizier from the [Root.GetMarathaOrFallbackName]"
- estate_privileges_and_agendas_events.8.j:0 "Select a Grand Vizier from the [Root.GetVaisyasOrFallbackName]"
- estate_privileges_and_agendas_events.8.k:0 "Select a Grand Vizier from the [Root.GetJainsOrFallbackName]"
- estate_privileges_and_agendas_events.8.l:0 "Select a Grand Vizier from the [Root.GetJanissariesOrFallbackName]"
- estate_privileges_and_agendas_events.8.m:0 "Select a Grand Vizier from the [Root.GetEunuchsOrFallbackName]"
- estate_privileges_and_agendas_events.8.n:0 "Select a Grand Vizier from the [Root.GetQizilbashOrFallbackName]"
- estate_privileges_and_agendas_events.8.o:0 "Select a Grand Vizier from the [Root.GetGhulamsOrFallbackName]"
- estate_privileges_and_agendas_events.8.zzz:0 "We are currently in no need for a Grand Vizier."
+ ASSIGN_HEIR_TT_PERSONAL_UNIONS:0 "我々の宗教は同君連合が許されているため、§Y王室間の婚姻§!を結んでいるすべての国に、我々に対する「§Y連合の回復§!」の開戦事由を与えます"
+ estate_privileges_and_agendas_events.3.n: "[Root.GetQizilbashName]の提案"
+ estate_privileges_and_agendas_events.3.o:1 "[Root.GetGhilmanName]の提案"
+ estate_privileges_and_agendas_events.6.o:0 "[Root.GetQizilbashOrFallbackName]に売ろう。"
+ estate_privileges_and_agendas_events.6.p:0 "[Root.GetGhulamsOrFallbackName]に売ろう。"
+ estate_privileges_and_agendas_events.7.o:0 "[Root.GetQizilbashOrFallbackName]から接収しよう。"
+ estate_privileges_and_agendas_events.7.p:0 "[Root.GetGhulamsOrFallbackName]から接収しよう。"
+ estate_privileges_and_agendas_events.8.t:0 "[Root.GetName]の大ヴェズィール"
+ estate_privileges_and_agendas_events.8.desc:0 "国家の官僚機構は、宮廷の最高顧問である大ヴェズィールにかかっています。自国の新たな大ヴェズィールとして、自国の階級から一人を選出する時が来ました。"
+ estate_privileges_and_agendas_events.8.a:0 "[Root.GetChurchOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.b:0 "[Root.GetBurghersOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.c:0 "[Root.GetNobilityOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.d:0 "[Root.GetDhimmiOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.e:0 "[Root.GetCossacksOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.f:0 "[Root.GetTribesOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.g:0 "[Root.GetBrahminsOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.h:0 "[Root.GetRajputOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.i:0 "[Root.GetMarathaOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.j:0 "[Root.GetVaisyasOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.k:0 "[Root.GetJainsOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.l:0 "[Root.GetJanissariesOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.m:0 "[Root.GetEunuchsOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.n:0 "[Root.GetQizilbashOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.o:0 "[Root.GetGhulamsOrFallbackName]から大ヴェズィールを選べ"
+ estate_privileges_and_agendas_events.8.zzz:0 "現状大ヴェズィールを全く必要としていない。"
