--- a/source/localisation/other_scripted_effect_l_english.yml
+++ b/source/localisation/other_scripted_effect_l_english.yml
@@ -24,12 +24,12 @@
  upgrade_courthouse_building_tt:0 "§Y[This.GetName]§! gets their §YCourthouse Building§! upgraded. If §YTown Hall§! is present, gain §G1§! Base Tax, §G1§! Base Production and §G1§! Base Manpower in §Y[This.GetName]§!."
  upgrade_fort_building_tt:0 "§Y[This.GetName]§! gets their §YFort Building§! upgraded. If §YFortress§! is present, gain §G3§! Base Manpower in §Y[This.GetName]§!."
  upgrade_naval_defense_building_tt:0 "§Y[This.GetName]§! gets their §YCoastal Defense Building§! upgraded. If §YNaval Battery§! is present, gain §G2§! Base Production in §Y[This.GetName]§!."
- set_trade_power_requirement_of_propogate_religion_5_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y5§!."
- set_trade_power_requirement_of_propogate_religion_10_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y10§!."
- set_trade_power_requirement_of_propogate_religion_15_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y15§!."
- set_trade_power_requirement_of_propogate_religion_20_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y20§!."
- set_trade_power_requirement_of_propogate_religion_25_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y25§!."
- set_trade_power_requirement_of_propogate_religion_30_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y30§!."
- set_trade_power_requirement_of_propogate_religion_35_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y35§!."
- set_trade_power_requirement_of_propogate_religion_40_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y40§!."
- set_trade_power_requirement_of_propogate_religion_45_tt:0 "Set the required Trade Power for the '§YPropagate Religion§!' Trading Policy to §Y45§!."
+ set_trade_power_requirement_of_propogate_religion_5_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y5§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_10_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y10§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_15_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y15§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_20_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y20§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_25_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y25§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_30_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y30§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_35_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y35§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_40_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y40§!に設定する。"
+ set_trade_power_requirement_of_propogate_religion_45_tt:0 "交易方針「§Y宗教の伝播§!」に必要な交易力を§Y45§!に設定する。"
