--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -154,7 +154,7 @@
  MODIFIER_ALLOWED_COSSACK_FRACTION:0 "コサック扶養限界比率"
  MODIFIER_ALLOWED_REV_GUARD_FRACTION:0 "革命衛兵扶養限界比率"
  MODIFIER_ALLOWED_RAJPUT_FRACTION:0 "ラージプート扶養限界比率"
- OURSIDETRUCEENDS_TITLE:0 "Truce Ended"
+ OURSIDETRUCEENDS_TITLE:0 "停戦終了"
  OURSIDETRUCEENDS_SETUP:0 "When a one-sided truce ends between your nation and another."
  OURSIDETRUCEENDS_HEADER:0 "Our Chancellor reports"
  OURSIDETRUCEENDS_1:0 "One-sided Truce Expired"
@@ -164,6 +164,6 @@
  OURSIDETRUCEENDS_LOG:0 "The truce between $ACTOR$ and $RECIPIENT$ has ended."
  OURSIDETRUCEENDS_BTN1:0 "OK"
  OURSIDETRUCEENDS_BTN2:0 "OK"
- OURSIDETRUCEENDS_BTN3:0 "Go to"
+ OURSIDETRUCEENDS_BTN3:0 "移動"
  DominationDLC:0 "Domination"
  KingOfKingsDLC:0 "King of Kings"
