--- a/source/localisation/goose_1_36_l_english.yml
+++ b/source/localisation/goose_1_36_l_english.yml
@@ -23,7 +23,7 @@
  THEIRSIDETRUCEENDS_LOG:0 "The truce between $ACTOR$ and $RECIPIENT$ has ended."
  THEIRSIDETRUCEENDS_BTN1:0 "OK"
  THEIRSIDETRUCEENDS_BTN2:0 "OK"
- THEIRSIDETRUCEENDS_BTN3:0 "Go to"
+ THEIRSIDETRUCEENDS_BTN3:0 "移動"
  REMOVE_GARRISON_EFFECT:0 "$PROVINCE$ will lose $AMOUNT|0$ garrison."
  ADD_GARRISON_EFFECT:0 "$PROVINCE$ will gain $AMOUNT|0$ garrison."
  HAS_MOD_ACTIVE:0 "Has $MOD$ mod active. (Active: $ACTIVEMODS$)"
@@ -51,7 +51,7 @@
  CURIATRANSFER_LOG:0 "We are the new Papal Controller."
  CURIATRANSFER_BTN1:0 "OK"
  CURIATRANSFER_BTN2:0 "OK"
- CURIATRANSFER_BTN3:0 "Go to"
+ CURIATRANSFER_BTN3:0 "移動"
  EDICTS_SET_FOR_TOO_LONG_MANY:0 "and $AMOUNT|Y$ more States..."
  EDICTS_SET_FOR_TOO_LONG_AREA:0 " with '$EDICT|Y$'"
  edict_set_for_too_long_instant:0 "§YExpensive Edicts§!"
@@ -72,7 +72,7 @@
  CURIATRANSFEROTHER_LOG:0 "$CONTROLLER$ is the new Papal Controller due to change of allegiance."
  CURIATRANSFEROTHER_BTN1:0 "OK"
  CURIATRANSFEROTHER_BTN2:0 "OK"
- CURIATRANSFEROTHER_BTN3:0 "Go to"
+ CURIATRANSFEROTHER_BTN3:0 "移動"
  MANPOWER_PERCENTAGE_TOOLTIP:0 "Current percentage of maximum manpower gives us the following modifiers:\n$MODIFIERS$"
  manpower_percentage:0 "Manpower percentage"
  SAILORS_PERCENTAGE_TOOLTIP:0 "Current percentage of maximum sailors gives us the following modifiers:\n$MODIFIERS$"
@@ -87,8 +87,8 @@
  CEDE_PROVINCE_BY_WHOM:0 "$PROVINCE|Y$ will be ceded by $COUNTRY|Y$"
  THEM_ASK_KNOWLEDGE_SHARING_TITLE:0 "Asked Knowledge Sharing"
  THEM_ASK_KNOWLEDGE_SHARING_SETUP:0 "When a nation asks for Knowledge Sharing from us"
- THEM_ASK_KNOWLEDGE_SHARING_HEADER:0 "Herald from"
- THEM_ASK_KNOWLEDGE_SHARING_1:0 "$ACTOR_COUNTRY$"
+ THEM_ASK_KNOWLEDGE_SHARING_HEADER:0 ""
+ THEM_ASK_KNOWLEDGE_SHARING_1:0 "$ACTOR_COUNTRY$からの使者"
  THEM_ASK_KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$, we have $TYPE$ news"
  THEM_ASK_KNOWLEDGE_SHARING_3:0 "$ACTOR_COUNTRY$"
  THEM_ASK_KNOWLEDGE_SHARING_4:0 "decided"
@@ -97,11 +97,11 @@
  THEM_ASK_KNOWLEDGE_SHARING_LOG:0 "$ACTOR_COUNTRY$ decided to $RESULT$ the request for Knowledge Sharing from us."
  THEM_ASK_KNOWLEDGE_SHARING_BTN1:0 "OK"
  THEM_ASK_KNOWLEDGE_SHARING_BTN2:0 "OK"
- THEM_ASK_KNOWLEDGE_SHARING_BTN3:0 "Go to"
+ THEM_ASK_KNOWLEDGE_SHARING_BTN3:0 "移動"
  THEM_KNOWLEDGE_SHARING_TITLE:0 "Offered Knowledge Sharing"
  THEM_KNOWLEDGE_SHARING_SETUP:0 "When a nation offers us Knowledge Sharing"
- THEM_KNOWLEDGE_SHARING_HEADER:0 "Herald from"
- THEM_KNOWLEDGE_SHARING_1:0 "$RECIPIENT_COUNTRY$"
+ THEM_KNOWLEDGE_SHARING_HEADER:0 ""
+ THEM_KNOWLEDGE_SHARING_1:0 "$RECIPIENT_COUNTRY$からの使者"
  THEM_KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$, we have $TYPE$ news"
  THEM_KNOWLEDGE_SHARING_3:0 "We"
  THEM_KNOWLEDGE_SHARING_4:0 "decided"
@@ -110,11 +110,11 @@
  THEM_KNOWLEDGE_SHARING_LOG:0 "We decided to $RESULT$ the offer of Knowledge Sharing from $ACTOR_COUNTRY$."
  THEM_KNOWLEDGE_SHARING_BTN1:0 "OK"
  THEM_KNOWLEDGE_SHARING_BTN2:0 "OK"
- THEM_KNOWLEDGE_SHARING_BTN3:0 "Go to"
+ THEM_KNOWLEDGE_SHARING_BTN3:0 "移動"
  THIRD_ASK_KNOWLEDGE_SHARING_TITLE:0 "Asked Knowledge Sharing"
  THIRD_ASK_KNOWLEDGE_SHARING_SETUP:0 "When a nation asks for Knowledge Sharing"
- THIRD_ASK_KNOWLEDGE_SHARING_HEADER:0 "Herald from"
- THIRD_ASK_KNOWLEDGE_SHARING_1:0 "$ACTOR_COUNTRY$"
+ THIRD_ASK_KNOWLEDGE_SHARING_HEADER:0 ""
+ THIRD_ASK_KNOWLEDGE_SHARING_1:0 "$ACTOR_COUNTRY$からの使者"
  THIRD_ASK_KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$, we have $TYPE$ news"
  THIRD_ASK_KNOWLEDGE_SHARING_3:0 "$ACTOR_COUNTRY$"
  THIRD_ASK_KNOWLEDGE_SHARING_4:0 "decided"
@@ -123,11 +123,11 @@
  THIRD_ASK_KNOWLEDGE_SHARING_LOG:0 "$ACTOR_COUNTRY$ decided to $RESULT$ the request for Knowledge Sharing from $RECIPIENT_COUNTRY$."
  THIRD_ASK_KNOWLEDGE_SHARING_BTN1:0 "OK"
  THIRD_ASK_KNOWLEDGE_SHARING_BTN2:0 "OK"
- THIRD_ASK_KNOWLEDGE_SHARING_BTN3:0 "Go to"
+ THIRD_ASK_KNOWLEDGE_SHARING_BTN3:0 "移動"
  THIRD_KNOWLEDGE_SHARING_TITLE:0 "Offered Knowledge Sharing"
  THIRD_KNOWLEDGE_SHARING_SETUP:2 "When a nation offers Knowledge Sharing"
- THIRD_KNOWLEDGE_SHARING_HEADER:0 "Herald from"
- THIRD_KNOWLEDGE_SHARING_1:0 "$RECIPIENT_COUNTRY$"
+ THIRD_KNOWLEDGE_SHARING_HEADER:0 ""
+ THIRD_KNOWLEDGE_SHARING_1:0 "$RECIPIENT_COUNTRY$からの使者"
  THIRD_KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$, we have $TYPE$ news"
  THIRD_KNOWLEDGE_SHARING_3:0 "$RECIPIENT_COUNTRY$"
  THIRD_KNOWLEDGE_SHARING_4:0 "decided"
@@ -136,7 +136,7 @@
  THIRD_KNOWLEDGE_SHARING_LOG:0 "$RECIPIENT_COUNTRY$ decided to $RESULT$ the offer of Knowledge Sharing from $ACTOR_COUNTRY$."
  THIRD_KNOWLEDGE_SHARING_BTN1:0 "OK"
  THIRD_KNOWLEDGE_SHARING_BTN2:0 "OK"
- THIRD_KNOWLEDGE_SHARING_BTN3:0 "Go to"
+ THIRD_KNOWLEDGE_SHARING_BTN3:0 "移動"
  IDEA_TAKEN_EFFECT:0 "Taking this idea will have the following effect:\n$EFFECT$"
  IDEA_GROUP_REMOVED_EFFECT:0 "Abandoning this idea group will give the following effect:\n$EFFECT$"
  TECHNOLOGY_RESEARCHED_EFFECT:0 "Researching this technology will have the following effect:\n$EFFECT$"
