--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -783,7 +783,7 @@
  has_reached_level_9:0 "政府改革レベル§Y9§!に到達している。"
  has_reached_level_10:0 "政府改革レベル§Y10§!に到達している。"
  enables_focus_on_armies_tt:0 "決断「§Y職業軍への注力§!」が選択可能になる。"
- no_more_comet_sighted_event_tt:1 "The §Y[Root.GetAdjective]§! people live now in a more enlightened time, making the event '§YComet Sighted§!' no longer possible to fire."
+ no_more_comet_sighted_event_tt:1 "§Y[Root.GetAdjective]§!の国民は今や、より開けた啓蒙の時代に生きており、以後イベント「§Y彗星の観測§!」が起こらなくなります。"
  allow_baseline_invite_scholar_privilege_tt:0 "この学者を招聘した場合、以下のボーナスを獲得する："
  allows_every_time_invite_of_hanafi_school:0 "外交関係が無くても、§Yハナフィー学派§!から学者を招聘することが可能となる。"
  allows_every_time_invite_of_hanbali_school:0 "外交関係が無くても、§Yハンバル学派§!から学者を招聘することが可能となる。"
