--- a/source/localisation/yama_1_36_l_english.yml
+++ b/source/localisation/yama_1_36_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  qizilbash:0 "クズルバシュ"
- QIZILBASH_NAME:0 "Qizilbash $NAME$"
+ QIZILBASH_NAME:0 "クズルバシュ$NAME$"
  MODIFIER_ALLOWED_QIZILBASH_FRACTION:0 "Qizilbash Force Limit Fraction"
  MODIFIER_LOCAL_HAS_QIZILBASH:0 "Province Allows Qizilbash"
  QIZILBASH_FORCELIMIT:0 "We can recruit up to $LIMIT|Y$ §GQizilbash§! owing to:\n$FLAMOUNT|Y$ from $PERC|%Y$ of our land force-limit of $FL$:\n"
@@ -9,14 +9,14 @@
  QIZILBASH_DESC:0 "The Qizilbash are Shia warriors of Turkoman origins from Azerbaijani-speaking tribes. Founded by the Safaviyya Sufi order, they are the state's elite infantry and cavalry who have grown in political power to be a direct rival to the Nobility. As a Shia militant force, the Qizilbash adhere to the Shi'i doctrines and as such oppose any anti-Shia sentiment from the state.\nThe number of Qizilbash that can be built depends on your estate privileges for the §YQizilbash§! estate and can be recruited in provinces that are either §YTurkish§!, §YAzerbaijani§! or §YTurkmeni§! culture, or are part of the §YCapital State§!."
  REGCAT_qizilbash:0 "クズルバシュ"
  QIZILBASH_REGIMENT:0 "Qizilbash Regiment\n$EFFECT$"
- HAVE_LESS_QIZILBASH_THAN:0 "Have less Qizilbash than §Y$VALUE$§!.\n"
+ HAVE_LESS_QIZILBASH_THAN:0 "クズルバシュが§Y$VALUE$§!未満である。\n"
  qizilbash_modifier:0 "Qizilbash Hired"
  HAVE_AT_LEAST_QIZILBASH_THAN:0 "Have at least §Y$VALUE$§! Qizilbash.\n"
- MODIFIER_AMOUNT_OF_QIZILBASH:0 "Qizilbash Force Limit"
+ MODIFIER_AMOUNT_OF_QIZILBASH:0 "クズルバシュ扶養限界"
  MODIFIER_HAS_QIZILBASH:0 "Country Allows Qizilbash"
  qizilbash_regiment:0 "Bonus from Qizilbash"
  ONLY_QIZILBASH_MODIFIER:0 "§YAffects only Qizilbash Regiments§!"
- mamluks:0 "Mamluks"
+ mamluks:0 "マムルーク"
  MAMLUKS_NAME:0 "Mamluks $NAME$"
  MODIFIER_ALLOWED_MAMLUKS_FRACTION:0 "Mamluks Force Limit Fraction"
  MODIFIER_LOCAL_HAS_MAMLUKS:0 "Province Allows Mamluks"
