Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -896,7 +896,7 @@
  cas_civil_war_interferance:0 "内政に干渉した"
  cas_civil_war_support:0 "内戦への関与"
  castilian_civil_war.1.t:0 "カスティーリャ内戦"
- castilian_civil_war.1.d:1 "During the past century the Castilian nobility have time and time again actively tried to interfere with the succession of the Castilian crown and have not flinched from allying outside powers. A new such battle seems to be brewing and the succession is again in question. The future legitimacy of the Castilian throne is being questioned by some leading nobles who would prefer a relative of the King aligned with the Aragonese Crown. Meanwhile, the supporters of the current establishment are making overtures to the Portuguese crown in order to secure the position of their candidate.\nThings have now spiraled into open conflict and it seems increasingly likely that the faction without royal support will attempt to put their candidate directly on the throne rather than in queue for it. Some parts of the nobility remain undecided yet, and some have chosen to make use of this opportunity to protest against perceived infringement of their old rights in general."
+ castilian_civil_war.1.d:1 "過去1世紀にわたって、カスティーリャの貴族は何度も何度も、カスティーリャ王位継承を積極的に妨害しようとし、外部勢力と手を組むことも辞さなかった。そのような新たな戦いが勃発し、王位継承が再び問題になっているようだ。カスティーリャ王位の将来的な正当性を疑問視する一部の有力貴族は、アラゴン王家と同盟関係にある国王の親族を希望している。一方、現体制の支持者たちは、自分たちの候補の地位を確保するために、ポルトガル王室への働きかけを行っている。\n事態は今や公然の対立に発展し、王室の支持を得られない派閥が、王位継承の列に並ぶのではなく、自分たちの候補者を直接王位に就かせようとする可能性が高まっているようだ。貴族の中にはまだ決めかねている者もおり、この機会を利用して、旧来の権利が侵害されているとして抗議することを選んだ者もいる。"
  castilian_civil_war.1.a:1 "ポルトガルからの支援を受ける"
  castilian_civil_war.1.a.tt:0 "我々と§Yポルトガル§!との接近をもたらすだろう。"
  castilian_civil_war.1.b:0 "アラゴンの候補者を支援する"
@@ -4391,8 +4391,8 @@
  TRADER_CHANGE:0 "変更"
  APH_ONLY_EUROPE:0 "ヨーロッパ大陸の州のみ追加することができます。"
  POWER_INC_TO_HERE:4 "この艦隊は§Y$NODE$§!ノードに交易力§Y$POW$§!を追加します。\nこれにより艦隊維持費に§R$MAIN$§!¤を費やしている間、我々の交易価値が§Y$CURRENTINCOME$§!¤から§Y$INCOME$§!¤（§Y$INCOMEDIFFERENCE$§!¤の$INCOMEDIR$）となる見込みです。\n合計の変化量は$PROFIT$¤の$DIR$となる見込みです。\n"
- DIR_PROF:0 "得る"
- DIR_LOSS:0 "失う"
+ DIR_PROF:0 "獲得"
+ DIR_LOSS:0 "喪失"
  RESEARCH_WHEN:0 "§Y$DATE$§!には実行するのに十分な力を有しているでしょう。"
  RESEARCH_NEVER:0 "我々は現在、軍事力の増加を持っていません。"
  START_CANAL_CONSTRUCTION:0 "$WHERE$で運河の建設を開始します。"
