--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -688,7 +688,7 @@
  the_qizilbash_desc:1 "クズルバシュ（赤い頭）とは、シーア派トルコ人による軍人集団だ。彼らは信仰のためならいつでも戦い、そして死ぬことができる。彼らは我が国のための力となるであろうし、我が国の軍隊の中核となるかもしれない。"
  persian_rug_production:0 "ペルシア絨毯"
  persian_rug_production_desc:0 "長きにわたり、ペルシアは絨毯や敷物の製造で有名だった。しかし、モンゴル人たちがペルシアに攻め込んだ時、絨毯産業は壊滅的な打撃をこうむった。ペルシアを復活させるには、経済を再建する必要がある。かつての強みを、蘇らせねばならない。"
- the_ghulams:1 "Found the Ghilman"
+ the_ghulams:1 "グラームの設立"
  the_ghulams_desc:0 "かつての我が国の軍隊は、王よりも自らに忠実な人々の軍である、クズルバシュの力に依存していた。しかし、国防には、歩兵と騎兵を備えた、シャーに忠実な常備軍を創設することが必要だ。"
  improved_silk_road:0 "シルクロードの整備"
  improved_silk_road_desc:0 "街道や橋の整備、街道の警備体制の構築、街道上での宿場の建設…これらはすべて、商人たちの自由な往来を促進するためであり、我が国の税収を増加させるためでもある。もちろん、そのための費用として、少しぐらいは通行料を取ろう。"
@@ -2085,7 +2085,7 @@
  TRE_ideas_start:0 "トレビゾンドの伝統"
  TRE_ideas_bonus:0 "トレビゾンドの宿願"
  komnenoi_in_exile:0 "コムネノスの亡命者"
- komnenoi_in_exile_desc:0 "東ローマ帝国の真の皇帝であり、彼の前任者がマラズギルトで我々を破滅の瀬戸際まで追いやった後に帝国を救った、アレクシオス1世の血統は、我々が1185年にイサキオス2世アンゲロスによってコンスタンティノープルから追放された後、トレビゾンドのここにある落ちぶれた状況で生きてきた。パレオロゴス王朝として知られるニカイアの簒奪者が今や皇帝であると主張しているが、世界は、ビザンツ帝国の正当な後継者がいつの日か簒奪者とトルコ人の両方を追放するため戻ってくることを知っている。"
+ komnenoi_in_exile_desc:0 "東ローマ帝国の真の皇帝であり、彼の前任者がマンツィケルトで我々を破滅の瀬戸際まで追いやった後に帝国を救った、アレクシオス1世の血統は、我々が1185年にイサキオス2世アンゲロスによってコンスタンティノープルから追放された後、トレビゾンドのここにある落ちぶれた状況で生きてきた。パレオロゴス王朝として知られるニカイアの簒奪者が今や皇帝であると主張しているが、世界は、ビザンツ帝国の正当な後継者がいつの日か簒奪者とトルコ人の両方を追放するため戻ってくることを知っている。"
  pontic_mountains:0 "ポントス山脈"
  pontic_mountains_desc:0 "アルプスがフランス人とイタリア人を隔てているのと同じように、ポントス山脈はアナトリア高原を奪ったトルコ人と、アナトリアで抵抗する最後のギリシャ人を隔てている。ポントスは常にアナトリアの残りの部分よりも、よりギリシャ的である…あるいは、古い偉大なミトリダテスの遺産が我々の戦士を鼓舞し、彼がローマに行ったようにトルコ人を恐れさせるのだろうか？"
  legacy_of_the_alexiad:0 "アレクシアードの遺産"
