--- a/source/localisation/sprite_packs_l_english.yml
+++ b/source/localisation/sprite_packs_l_english.yml
@@ -306,11 +306,11 @@
  dlc120_SUL_sprite_pack:0 "フィリピンのスプライト"
  dlc120_TOU_sprite_pack:0 "トゥールーズのスプライト"
  dlc120_WUU_sprite_pack:0 "華南のスプライト"
- dlc129_ARM_sprite_pack:0 "Armenia Sprites"
- dlc129_CYP_sprite_pack:0 "Cyprus Sprites"
- dlc129_GEO_sprite_pack:0 "Georgia Sprites"
- dlc129_ISR_sprite_pack:0 "Israel Sprites"
- dlc129_KAR_sprite_pack:0 "Karaman Sprites"
- dlc129_SYR_sprite_pack:0 "Syrian Sprites"
- dlc129_TLC_sprite_pack:0 "Berber Sprites"
- dlc129_TRE_sprite_pack:0 "Pontic Sprites"
+ dlc129_ARM_sprite_pack:0 "アルメニアのスプライト"
+ dlc129_CYP_sprite_pack:0 "キプロスのスプライト"
+ dlc129_GEO_sprite_pack:0 "グルジアのスプライト"
+ dlc129_ISR_sprite_pack:0 "イスラエルのスプライト"
+ dlc129_KAR_sprite_pack:0 "カラマンのスプライト"
+ dlc129_SYR_sprite_pack:0 "シリアのスプライト"
+ dlc129_TLC_sprite_pack:0 "ベルベルのスプライト"
+ dlc129_TRE_sprite_pack:0 "ポントスのスプライト"
