--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -5643,14 +5643,14 @@
  VASSAL_TIMER:0 "§Y$DATE$§!まで、この提案をすることはできません。"
  NOCLAIMONNOTIND:0 "従属国の王位を請求することはできません。"
  LOCAL_DEFENSIVENESS:0 "州の防衛"
- BASE_TAX_LESS_THAN:1 "Base Tax less than "
- BASE_TAX_MORE_THAN:1 "Base Tax at least "
+ BASE_TAX_LESS_THAN:1 "基本税が右記未満である："
+ BASE_TAX_MORE_THAN:1 "基本税が右記以上である："
  PROVINCE_TRADE_POWER_LESS_THAN:0 "州交易力が右記未満である："
  PROVINCE_TRADE_POWER_MORE_THAN:0 "州交易力が右記以上である："
- BASE_PROD_LESS_THAN:1 "Base Production less than "
- BASE_PROD_MORE_THAN:1 "Base Production at least "
- BASE_MP_LESS_THAN:1 "Base Manpower less than "
- BASE_MP_MORE_THAN:1 "Base Manpower at least "
+ BASE_PROD_LESS_THAN:1 "基本生産が右記未満である："
+ BASE_PROD_MORE_THAN:1 "基本生産が右記以上である："
+ BASE_MP_LESS_THAN:1 "基本人的資源が右記未満である："
+ BASE_MP_MORE_THAN:1 "基本人的資源が右記以上である："
  IS_NOT_LOOTED:0 "略奪されていない"
  IS_LOOTED:0 "略奪されている"
  INDEF:0 "以下の終了："
