--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -58,9 +58,9 @@
  desc_fra_professional_guard_modifier:1 "よく訓練された部隊は成功を収めるあらゆる軍の中核である。"
  desc_fra_trained_revolutionary_guard1_modifier:1 "軍隊の絶え間なき訓練は、部隊の規律と熟練度に関して大きな特典をもたらした。"
  desc_fra_trained_revolutionary_guard2_modifier:1 "軍隊の絶え間なき訓練は、部隊の規律と熟練度に関して大きな特典をもたらした。"
- desc_fra_rightful_emperor_of_italy_modifier:1 "Our efforts to return Italy under the protection of the Holy Roman Empire have massively paid off."
- desc_fra_franco_iberian_cooperation_modifier:1 "Our close ties with our Iberian brethren are a propelling force that will catapult both of our great nations into a position of prestige and neverending splendor."
- desc_fra_light_of_catholicism_modifier:1 "Our position within the Holy See has granted us incredible amounts of influence with the Holy Father."
+ desc_fra_rightful_emperor_of_italy_modifier:1 "イタリアを神聖ローマ帝国の保護下に戻そうとした自国の努力は、大きな成果を上げた。"
+ desc_fra_franco_iberian_cooperation_modifier:1 "イベリア半島の同胞との緊密な結びつきは、両大国を威信と果てしない栄光への地位に押し出す推進力だ。"
+ desc_fra_light_of_catholicism_modifier:1 "教皇庁内における自国の地位は信じられないほどの強行への影響力を与えている。"
  desc_fra_colonial_rush_modifier:1 "The New World is real! Our men rush to colonize and tame this new foreign land which promises great wealth."
  desc_fra_hudson_bay_fur_modifier:1 "The furs deriving from the colder parts of the New World are of great quality."
  desc_fra_french_bombards_modifier:1 "Our siege weapons will tear down any and all resistance in our struggle to liberate our land and protect our folk."
@@ -75,7 +75,7 @@
  desc_fra_venetian_craftsmanship_modifier:1 "The expertise of the Venetian shipwrights will serve the French royal court."
  desc_fra_roi_palace_triggered_modifier:1 "The French royal summer residence in Venice is adorned with a magnificent palace, marbe and displays of art in a great exhibition of power, control and royal accord."
  desc_fra_roi_palace_modifier:1 "The French royal summer residence in Venice is adorned with a magnificent palace, marbe and displays of art in a great exhibition of power, control and royal accord."
- desc_fra_coronated_by_the_pope_modifier:1 "Our ruler is coronated by the Holy Father himself, enjoying legitimacy and prestige."
+ desc_fra_coronated_by_the_pope_modifier:1 "自国の支配者は、教皇によって戴冠を受けており、正当性と威信に恵まれている。"
  desc_fra_golden_march_modifier:1 "Italy rightfully belongs to the French crown!"
  desc_fra_golden_march2_modifier:1 "Italy rightfully belongs to the French crown!"
  desc_fra_french_cloth_centers_modifier:1 "The cloth centers within our realm are famed for the quality of their fabrics as well as their production volumes."
@@ -296,7 +296,7 @@
  peasant_revolt_leader_personality_die_desc:1 "Our ruler was a champion of the rights of peasants and little folk alike."
  desc_peasant_revolt_leader_personality:1 "This ruler is a champion of the peasantry within our nation."
  desc_iron_crowned_personality:1 "This ruler has earned their trait as a powerful conqueror, forged by fire."
- desc_fu_papal_puppetmaster_personality:1 "This ruler has tremendous influence behind the scenes in the seat of the Holy Father."
+ desc_fu_papal_puppetmaster_personality:1 "この支配者は、教皇の座の影で絶大な影響力を持っている。"
  desc_tur_silk_road_main_trade_post:1 "This province is an important point across the Silk Road."
  monarchy_mechanic_desc:0 ""
  republic_mechanic_desc:0 ""
@@ -513,10 +513,10 @@
  make_dummy_desc:0 ""
  CB_ALLOWED_make_dummy:0 ""
  PEACE_make_dummy:0 ""
- ASK_FOR_CONTRIBUTION_VAISYAS_level_1:0 "Investment Contribution"
- ASK_FOR_CONTRIBUTION_VAISYAS_level_2:0 "Investment Contribution"
- ASK_FOR_CONTRIBUTION_VAISYAS_level_3:0 "Investment Contribution"
- ASK_FOR_CONTRIBUTION_VAISYAS_level_4:0 "Investment Contribution"
+ ASK_FOR_CONTRIBUTION_VAISYAS_level_1:0 "投資への貢献"
+ ASK_FOR_CONTRIBUTION_VAISYAS_level_2:0 "投資への貢献"
+ ASK_FOR_CONTRIBUTION_VAISYAS_level_3:0 "投資への貢献"
+ ASK_FOR_CONTRIBUTION_VAISYAS_level_4:0 "投資への貢献"
  desc_ASK_FOR_CONTRIBUTION_VAISYAS_level_1:0 ""
  desc_ASK_FOR_CONTRIBUTION_VAISYAS_level_2:0 ""
  desc_ASK_FOR_CONTRIBUTION_VAISYAS_level_3:0 ""
