--- a/source/localisation/gecko_1_36_l_english.yml
+++ b/source/localisation/gecko_1_36_l_english.yml
@@ -1,4 +1,4 @@
 ﻿l_english:
- CALLDESC_ALREADY_INVITED:0 "Call to arms already pending"
- SET_PAPACY_ACTIVE_EFFECT_YES:0 "Enable the $RELIGION$ Papacy"
- SET_PAPACY_ACTIVE_EFFECT_NO:0 "Disable the $RELIGION$ Papacy"
+ CALLDESC_ALREADY_INVITED:0 "参戦要請は既に保留中です"
+ SET_PAPACY_ACTIVE_EFFECT_YES:0 "$RELIGION$教皇制が有効になる"
+ SET_PAPACY_ACTIVE_EFFECT_NO:0 "$RELIGION$教皇制が無効になる"
