--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -20,7 +20,7 @@
  MISSIONCANCELLED_BTN1:0 "OK"
  MISSIONCANCELLED_BTN2:0 "OK"
  MISSIONCANCELLED_BTN3:0 "移動"
- EStopMissionReason_Exiled:0 "このユニットは追放されています。"
+ EStopMissionReason_Exiled:0 "このユニットは放浪しています。"
  EStopMissionReason_NoLeader:0 "このユニットには指揮官がいません。"
  EStopMissionReason_Retreating:0 "このユニットは退却中です。"
  EStopMissionReason_Completed:0 "任務が完了しました。"
@@ -1970,7 +1970,7 @@
  TERCIO_NAME:0 "$HOME$のテルシオ連隊$ORDER$$NUM$"
  MODIFIER_ALLOWED_TERCIO_FRACTION:1 "テルシオ扶養限界比率"
  MODIFIER_LOCAL_HAS_TERCIO:1 "テルシオ歩兵が州内で利用可能になる"
- TERCIO_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gテルシオ§!を雇用できます：\n$FL$ の扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ TERCIO_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gテルシオ§!を雇用できます：\n扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  TERCIO_FORCELIMIT_ADDITIONAL:0 "$AMOUNT|Y$が追加されます："
  TERCIO_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、テルシオ歩兵を募集できません。"
  ADD_TERCIO_SUB_UNIT_EFFECT:1 "$WHERE|Y$の「§Gテルシオ§!」$UNIT$を得られます。"
@@ -1984,7 +1984,7 @@
  MUSKETEER_NAME:0 "$HOME$の銃士隊$ORDER$$NUM$"
  MODIFIER_ALLOWED_MUSKETEER_FRACTION:0 "銃士扶養限界"
  MODIFIER_LOCAL_HAS_MUSKETEER:0 "銃士歩兵が州内で利用可能になる"
- MUSKETEER_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G銃士隊§!を雇用できます：\n$FL$ の扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ MUSKETEER_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G銃士隊§!を雇用できます：\n扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  MUSKETEER_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、銃士歩兵を募集できません。"
  ADD_MUSKETEER_SUB_UNIT_EFFECT:0 "$WHERE|Y$の「§G銃士§!」$UNIT$を得ます。"
  MUSKETEER_DESC:0 "銃士は17世紀にフランス軍およびフランス王の精鋭衛兵で広く採用された歩兵に分類される兵士である。銃士はマスケット銃を横陣や方陣のような陣形で使用するよう訓練され、しばしば槍兵や騎兵と連動して戦闘を行った。有名なフランス銃士は、彼らの勇敢さ、忠誠心、つば広帽と長剣を身に着けた特徴的な制服で知られている。\n銃士は、§Yフランス§!文化グループに属する領有州で徴募でき、銃士の数はそれらの州の開発度によって決定する。"
@@ -1999,7 +1999,7 @@
  SAMURAI_NAME:0 "$HOME$の侍連隊$ORDER$$NUM$"
  MODIFIER_ALLOWED_SAMURAI_FRACTION:0 "侍扶養限界"
  MODIFIER_LOCAL_HAS_SAMURAI:0 "侍歩兵が州内で利用可能になる"
- SAMURAI_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G侍§!を雇用できます：\n$FL$ の扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ SAMURAI_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G侍§!を雇用できます：\n扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  SAMURAI_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、侍歩兵を募集できません。"
  ADD_SAMURAI_SUB_UNIT_EFFECT:0 "$WHERE|Y$の「§G侍§!」$UNIT$を得ます。"
  SAMURAI_DESC:0 "侍は、日本の中世から近世にかけての軍事階級の集団である。彼らは武器の使用を訓練され、忠誠心、勇気、名誉を重視する武士道として知られる行動規範に則って生きることを期待された。侍は主君である大名に仕え、主君のために命を捧げる覚悟を持つことが期待されている。侍階級は、19世紀末の明治維新と日本の王政復古の中で廃止された。\n侍は、§Y日本§!文化グループに属する領有州で徴募でき、侍の数はそれらの州の開発度によって決定する。 "
@@ -2012,7 +2012,7 @@
  GEOBUKSEON_NAME:0 "亀甲船 $NAME$"
  MODIFIER_ALLOWED_GEOBUKSEON_FRACTION:0 "亀甲船扶養限界"
  MODIFIER_LOCAL_HAS_GEOBUKSEON:0 "亀甲船が州内で利用可能になる"
- GEOBUKSEON_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G亀甲船§!を造船できます：\n$FL$ の海軍扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ GEOBUKSEON_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G亀甲船§!を造船できます：\n海軍扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  GEOBUKSEON_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州のため、亀甲船を召集できません。"
  ADD_GEOBUKSEON_SUB_UNIT_EFFECT:0 "$WHERE|Y$の「§G亀甲船§!」$UNIT$を得ます。"
  GEOBUKSEON_DESC:1 "亀甲船、西洋では「亀の船」として知られるものは、朝鮮海軍独自の大型軍船で、船を覆い船員を保護する貝殻のような装甲、船の前部には船を覆い隠すために煙を吐くことができる龍頭がに取り付けられている。\n亀甲船の造船可能数は、海軍扶養限界によって決まり、海岸州であれば、その州で造船できる。"
@@ -2025,7 +2025,7 @@
  MAN_OF_WAR_NAME:0 "軍艦 $NAME$"
  MODIFIER_ALLOWED_MAN_OF_WAR_FRACTION:0 "軍艦扶養限界"
  MODIFIER_LOCAL_HAS_MAN_OF_WAR:0 "軍艦が州内で利用可能になる"
- MAN_OF_WAR_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G軍艦§!を造船できます：\n$FL$ の海軍扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ MAN_OF_WAR_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§G軍艦§!を造船できます：\n海軍扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  MAN_OF_WAR_LIMIT_CULTURE:1 "$PROVINCE$はドックまたは造船所がないため、軍艦を召集できません。"
  ADD_MAN_OF_WAR_SUB_UNIT_EFFECT:0 "$WHERE|Y$の「§G軍艦§!」$UNIT$を得ます。"
  MAN_OF_WAR_DESC:1 "マンノウォーこと軍艦はブリテン海軍の強力なフリゲート艦である。横列に並ぶ大砲で武装し、大きな帆で推進され、その速度と力の組み合わせはほぼ類を見ない。\n軍艦の造船可能数は、海軍扶養限界によって決まり、ドックもしくは造船所が建造されている州で造船できる。"
@@ -2038,7 +2038,7 @@
  GALLEON_NAME:0 "ガレオン $NAME$"
  MODIFIER_ALLOWED_GALLEON_FRACTION:0 "ガレオン扶養限界"
  MODIFIER_LOCAL_HAS_GALLEON:0 "ガレオンが州内で利用可能になる"
- GALLEON_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gガレオン§!を造船できます：\n$FL$ の海軍扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ GALLEON_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gガレオン§!を造船できます：\n海軍扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  GALLEON_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州のため、ガレオンを召集できません。"
  ADD_GALLEON_SUB_UNIT_EFFECT:0 "$WHERE|Y$の「§Gガレオン§!」$UNIT$を得ます。"
  GALLEON_DESC:0 "ガレオンはスペイン独自の海軍艦船であり、強力な武装と頑丈な大型船舶から成り立っている。ガレオンは細長い船体を持ち、非常に速く機動力がある。\nガレオンの造船可能数は、§Yイベリア§!文化グループに属する自国の領有州の総開発度によって決まり、海岸州であれば、その州で造船できる。"
@@ -2051,7 +2051,7 @@
  GALLEASS_NAME:0 "ガレアス $NAME$"
  MODIFIER_ALLOWED_GALLEASS_FRACTION:0 "ガレアス扶養限界"
  MODIFIER_LOCAL_HAS_GALLEASS:0 "ガレアスが州内で利用可能になる"
- GALLEASS_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gガレアス§!を造船できます：\n$FL$ の海軍扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ GALLEASS_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gガレアス§!を造船できます：\n海軍扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  GALLEASS_LIMIT_CULTURE:1 "$PROVINCE$はドックまたは造船所がないため、ガレアスを召集できません。"
  ADD_GALLEASS_SUB_UNIT_EFFECT:0 "$WHERE|Y$の「§Gガレアス§!」$UNIT$を得ます。"
  GALLEASS_DESC:0 "ガレアスは、ガレー船に比べて高く大きな船であり、ガレオンの速度と海洋適性、火砲の威力を兼ね備えた船でもあった。\nガレアスは15世紀から17世紀にかけて主にイタリアのヴェネツィアで建造されたが、地中海での主要な海戦、例えばレパントの戦いにおいて重要な存在であった。\nガレアスの造船可能数は、海軍伝統によって決まり、ドックもしくは造船所が建造されている海岸州で造船できる。"
@@ -2064,7 +2064,7 @@
  CARAVEL_NAME:0 "キャラベル $NAME$"
  MODIFIER_ALLOWED_CARAVEL_FRACTION:0 "キャラベル扶養限界"
  MODIFIER_LOCAL_HAS_CARAVEL:0 "キャラベルが州内で利用可能になる"
- CARAVEL_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gキャラベル§!を造船できます：\n$FL$ の海軍扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ CARAVEL_FORCELIMIT:0 "以下の理由により、最大$LIMIT|Y$の§Gキャラベル§!を造船できます：\n海軍扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  CARAVEL_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州のため、キャラベルを召集できません。"
  ADD_CARAVEL_SUB_UNIT_EFFECT:0 "$WHERE|Y$の「§Gキャラベル§!」$UNIT$を得ます。"
  CARAVEL_DESC:0 "キャラベルはポルトガル海軍独自の小型で速く、機動力の高いある帆船であり、主に大航海時代の探検航海に使用されました。\nキャラベルの造船可能数は、§Yポルトガル§!文化グループに属する自国の領有州の総開発度によって決まり、海岸州であればその州で造船できる。"
@@ -2077,7 +2077,7 @@
  VOC_INDIAMEN_NAME:1 "VOCインディアマン $NAME$"
  MODIFIER_ALLOWED_VOC_INDIAMEN_FRACTION:1 "VOCインディアマン扶養限界"
  MODIFIER_LOCAL_HAS_VOC_INDIAMEN:1 "VOCインディアマンが州内で利用可能になる"
- VOC_INDIAMEN_FORCELIMIT:1 "以下の理由により、最大$LIMIT|Y$の§GVOCインディアマン§!を造船できます：\n$FL$ の海軍扶養限界$PERC|%Y$ からの$FLAMOUNT|Y$ です：\n"
+ VOC_INDIAMEN_FORCELIMIT:1 "以下の理由により、最大$LIMIT|Y$の§GVOCインディアマン§!を造船できます：\n海軍扶養限界$FL$のうち$PERC|%Y$分 $FLAMOUNT|Y$：\n"
  VOC_INDIAMEN_LIMIT_CULTURE:1 "$PROVINCE$は$CULTURE$文化の州のため、VOCインディアマンを召集できません。"
  ADD_VOC_INDIAMEN_SUB_UNIT_EFFECT:1 "$WHERE|Y$の「§GVOCインディアマン§!」$UNIT$を得ます。"
  VOC_INDIAMEN_DESC:1 "VOCインディアマンは、オランダ東インド会社の勅許許可証の下で運航される船舶で、できるだけ多くの交易品を運び、潜在的な海賊の襲撃から自己防衛するために武装している。\nVOCインディアマンの造船可能数は、交易効率によって決まり、海岸州で造船できる。"
@@ -2203,4 +2203,4 @@
  DIPLO_SUBJECT_MUST_ACCEPT_FOR_PRICE:0 "$WHO$は好感度$NUM$のため参戦要請を受諾せねばなりません："
  DIPLO_SUBJECT_MUST_ACCEPT:0 "$WHO$は参戦要請を受諾せねばなりません："
  DIPLO_SUBJECT_MUST_ACCEPT_CO_BELLIGERENT:0 "$WHO$は供戦国として宣戦布告されました："
- CANNOT_ASK_KNOWLEDGE_SHARE_ISATWAR:0 "You cannot ask to Share Knowledge when you are at war with them."
+ CANNOT_ASK_KNOWLEDGE_SHARE_ISATWAR:0 "戦争中に知識共有の依頼はできない。"
