Save/Update files [ci skip]

--- a/source/localisation/hnn_l_english.yml
+++ b/source/localisation/hnn_l_english.yml
@@ -53,13 +53,13 @@
  MODIFIER_MANPOWER_IN_CULTURE_GROUP_PROVINCES:0 "同じ文化グループを持つ州での人的資源"
  under_governing_capacity_modifier:0 "管理限界内"
  UNDER_GOVERNING_CAPACITY_TOOLTIP:0 "\n管理限界§Gを下回っている§!ことによる利益：\n$MOD$"
- now_rise_my_loyal_subjects:0 "Now Rise my Loyal Subjects"
- a_continuation_of_diplomacy:0 "A Continuation of Diplomacy"
+ now_rise_my_loyal_subjects:0 "我が忠実なる臣民よ今こそ立ち上がれ"
+ a_continuation_of_diplomacy:0 "外交の継続"
  prussian_ambitions:0 "プロイセンの宿願"
- order_and_diplomacy:0 "Order and Diplomacy"
- life_under_the_shadow_kingdom:0 "Life under the Shadow Kingdom"
- election_of_a_habsburg:0 "Election of a Habsburg"
- autumn_in_aachen:0 "Autumn in Aachen"
+ order_and_diplomacy:0 "秩序と外交"
+ life_under_the_shadow_kingdom:0 "影の王国の下での生涯"
+ election_of_a_habsburg:0 "ハプスブルクの選出"
+ autumn_in_aachen:0 "アーヘンの秋"
  ninety-five_theses:0 "九十五ヶ条の論題"
  imperial_diet:0 "帝国議会"
  charlemange_s_legacy:0 "シャルルマーニュの遺産"
