--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -155,13 +155,13 @@
  MODIFIER_ALLOWED_REV_GUARD_FRACTION:0 "革命衛兵扶養限界比率"
  MODIFIER_ALLOWED_RAJPUT_FRACTION:0 "ラージプート扶養限界比率"
  OURSIDETRUCEENDS_TITLE:0 "停戦終了"
- OURSIDETRUCEENDS_SETUP:0 "When a one-sided truce ends between your nation and another."
- OURSIDETRUCEENDS_HEADER:0 "Our Chancellor reports"
- OURSIDETRUCEENDS_1:0 "One-sided Truce Expired"
- OURSIDETRUCEENDS_2:1 "Our truce with $RECIPIENT$ ended."
- OURSIDETRUCEENDS_5:1 "We can now declare war on them without additional penalties."
- OURSIDETRUCEENDS_6:0 "This was a one-sided truce."
- OURSIDETRUCEENDS_LOG:0 "The truce between $ACTOR$ and $RECIPIENT$ has ended."
+ OURSIDETRUCEENDS_SETUP:0 "自国と他国の間で一方的な停戦が終結した場合。"
+ OURSIDETRUCEENDS_HEADER:0 "宰相の報告"
+ OURSIDETRUCEENDS_1:0 "一方的な停戦の終了"
+ OURSIDETRUCEENDS_2:1 "$RECIPIENT$との停戦が終了した。"
+ OURSIDETRUCEENDS_5:1 "今なら追加ペナルティ無しで彼らに宣戦布告できます。"
+ OURSIDETRUCEENDS_6:0 "これは一方的な停戦でした。"
+ OURSIDETRUCEENDS_LOG:0 "$ACTOR$と$RECIPIENT$間の停戦は終了しました。"
  OURSIDETRUCEENDS_BTN1:0 "OK"
  OURSIDETRUCEENDS_BTN2:0 "OK"
  OURSIDETRUCEENDS_BTN3:0 "移動"
