--- a/source/localisation/watersnake_1_36_l_english.yml
+++ b/source/localisation/watersnake_1_36_l_english.yml
@@ -10,11 +10,11 @@
  can_estate_interaction_delayed:0 "以下の階級の相互作用が利用可能：\n$LIST|Y$"
  COUNTRIES_CAUSING_CALL_TO_PEACE:0 "以下の国で戦争疲弊が高まりつつある：\n$LIST|Y$"
  can_estate_seize_land_instant:0 "§Y土地の没収が可能§!"
- can_estate_seize_land_delayed:0 "You are able to Seize land from Estates to centralize the realm."
- can_estate_call_diet_instant:0 "§YYou can summon a Diet§!"
- can_estate_call_diet_delayed:0 "You are able to assemble a Diet to receive proposals of Estates."
- can_estate_sell_land_instant:0 "§YYou can Sell Titles§!"
- can_estate_sell_land_delayed:0 "You are able to sell Crownland to Estates in exchange for ducats."
+ can_estate_seize_land_delayed:0 "領地の集中化のため、階級から土地を没収することができます。"
+ can_estate_call_diet_instant:0 "§Y議会の召集が可能§!"
+ can_estate_call_diet_delayed:0 "階級からの提案を受理するために議会を召集することができます。"
+ can_estate_sell_land_instant:0 "§Y称号の売却が可能§!"
+ can_estate_sell_land_delayed:0 "階級に直轄地を売却し、ダカットを得ることができます。"
  NAVAL_DOCTRINE_CHANGE_COST:0 "This will cost you $COST|Y2$¤ due to your navy having a capacity of $SAILORS|Y0$ Sailors and give you the following permanent effect:"
  SHIFT_SPEND_MANPOWER_TO_BOOST_PROGRESS:0 "§YShift + Click§! to use $NUMBER|Y$ manpower to bring the project forward by $DAYS|Y$ days"
  SHIFT_SPEND_MONEY_TO_BOOST_PROGRESS:0 "§YShift + Click§! to use $COST|Y$¤ to bring the project forward by $DAYS|Y$ days"
