--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -531,9 +531,9 @@
  naval_tactica:0 "タクティカ"
  naval_tactica_desc:0 "タクティカは、ローマ帝国の軍事と海戦での経験を集めた軍事マニュアルである。海上の戦術の多くは、中世を越えても海軍に通用する。"
  ICON_ASKKNOWLEDGESHARE:0 "§Y知識共有§!の提案"
- ASK_KNOWLEDGESHARENEWDESC:0 "Do you wish to proceed asking $COUNTRY|Y$ for Knowledge Sharing? Should they accept, we will pay them §G$PERCENT$%§! of our income ($INCOME|Y$ ¤) every month. Meanwhile, growth of their oldest established Institution not embraced by us (currently $INSTITUTION|Y$) will be accelerated by $GROWTH$ per month in our capital area."
- NO_INSTITUTION_TO_SHARE_ASK:0 "There is no Institution we can learn from them about."
- WE_HAVE_KNOWLEDGE_SHARING:0 "We are already involved in Knowledge Sharing with @$TAG$ $NAME$ until $EXPIRY$."
+ ASK_KNOWLEDGESHARENEWDESC:0 "$COUNTRY|Y$に対し知識共有の要請を行いますか？受け入れられた場合、我々は彼らに月収の§G$PERCENT$%§!（$INCOME|Y$¤）を支払います。一方、彼らが確立した最も古い制度のうち我々が受容していないもの（現在は$INSTITUTION|Y$）の成長は、我々の首都地域で毎月$GROWTH$加速します。"
+ NO_INSTITUTION_TO_SHARE_ASK:0 "彼らから学ぶことができる制度はありません。"
+ WE_HAVE_KNOWLEDGE_SHARING:0 "我々はすでに$EXPIRY$までの間@$TAG$$NAME$との知識共有に関与しています。"
  ASK_KNOWLEDGESHARETITLE:0 "知識共有の依頼"
- ASK_KNOWLEDGESHAREDESC:0 "Ask for them to Share Knowledge regarding their Institutions' technological advances."
+ ASK_KNOWLEDGESHAREDESC:0 "彼らに制度の技術的進歩に関する知識共有を要請します。"
  ASK_KNOWLEDGESHARE_REVERSE:0 "$COUNTRY|Y$の無教養な群衆は、知識共有という手段を通じて技術進歩に追いつく機会を我々に求めています。これは彼らの首都地域の州において$INSTITUTION$を$GROWTH$の成長を与えます。当然ながら、我々が受け入れるならば、彼らの収入の§G$PERCENT$％§!（$FEE$¤）を毎月支払わせます。"
