Extract files from game [ci skip]

--- a/extract/localisation/origins_l_english.yml
+++ b/extract/localisation/origins_l_english.yml
@@ -1085,9 +1085,9 @@
  mal_give_gold_away_desc:0 "[Root.GetMaliReligionGenorisityMissionText]"
  mal_give_gold_away_desc_muslim:1 "Possessing wealth and the riches of the earth is great, but it does not fulfil the vision of the Prophet. Instead of sitting on our riches we should follow the steps of the great Mansa Musa and share our gold with our brethren of faith, most notably those in Anatolia, Egypt and, of course, Mecca."
  mal_give_gold_away_desc_fetishist:1 "This world has gifted us with valuable metals and other riches, and we know how to enjoy it. However, it is not in the spirit of our shamans and our beliefs. Instead we should share our riches with other great tribes of the world!"
- mal_jihad_upon_own_population_title:0 "Convert [Root.GetName]"
+ mal_jihad_upon_own_population_title:1 "[Root.GetPreviewColorMAL]Convert [Root.GetName][Root.GetPreviewColorMAL_end]"
  mal_jihad_upon_own_population_desc:1 "With the Islamization of our aristocracy we have decided to convince our people to embrace Islam as well. We should get going with it, root the heathen practices of the past out and eliminate the power the [Root.GetDhimmiName] has over us."
- mal_more_tolerance_to_heathens_title:0 "Tolerate Tradition"
+ mal_more_tolerance_to_heathens_title:1 "[Root.GetPreviewColorMAL]Tolerate Tradition[Root.GetPreviewColorMAL_end]"
  mal_more_tolerance_to_heathens_desc:0 "We have decided to let our rural people keep practicing their traditional religion. However the upper class of our realm is not too keen on it. We need to increase our public tolerance of the old traditions and reduce the power the [Root.GetClergyName] has over our [Root.GovernmentName]."
  ###SON MISSIONS###
  son_build_military_title:0 "War Preparations"
@@ -1131,19 +1131,19 @@
  son_conquer_the_mossi_title:0 "Eliminate the Mossi Threat"
  son_conquer_the_mossi_desc:1 "The Mossi tribes in the south have been a thorn in our side for quite some time. Although they fight each other regularly, they and the Tuareg still manage to organize raids on our villages. If we want any peace from these heathens we have to show strength and eliminate these tribes."
  son_conquer_the_mossi_tt:0 "Every §YMossi§! province is owned by §Y[Root.GetName]§! or its non-Tributary Subjects."
- son_convert_the_mossi_title:0 "Convert the Mossi"
+ son_convert_the_mossi_title:1 "[Root.GetPreviewColorSON]Convert the Mossi[Root.GetPreviewColorSON_end]"
  son_convert_the_mossi_desc:0 "The [Root.GetClergyName] have studied the history of the Mossi and their raids against our people, and have suggested a solution: the total conversion of the Mossi to the true faith! These heathens must see the light of Allah!"
  son_convert_the_mossi_tt:0 "Every §YMossi§! province is §Y[Root.Religion.GetName]§!."
  son_convert_the_mossi_ct:0 "Every §YMossi§! province loses §G100§! Autonomy and gets the modifier '§YDevoted Followers§!' for §Y30§! years, giving following effects:\nLocal Separatism: §G-10.0§!"
- son_invite_foreign_scholars_title:0 "Invite Scholars"
+ son_invite_foreign_scholars_title:1 "[Root.GetPreviewColorSON]Invite Scholars[Root.GetPreviewColorSON_end]"
  son_invite_foreign_scholars_desc:0 "We are far away from our brethren in Arabia and so are our scholars. Therefore, our laws have changed independently from theirs. We should invite scholars from the east and hear their newest advancements in the laws of the [Root.Religion.GetName]."
  son_invite_foreign_scholars_ct:0 "Any country, which capital is NOT in the §YSahel§!, §YNiger§! or §YGuinea§! region and is following the §Y[Root.Religion.GetName]§! faith, is allied with §Y[Root.GetName]§!."
  son_invite_foreign_scholars_bt:0 "[Root.GetName] will be able to invite a §YScholar§! without diplomatic requirements.\n"
  son_invite_foreign_scholars_at:0 "The type of Scholar depends on what school has been invited on the moment of completing this mission."
  son_invite_foreign_scholars_tt:0 "Has their capital NOT in the §YSahel§!, §YNiger§! or §YGuinea§! region\n  Is §Y[Root.Religion.GetName]§!\n  Has an opinion of at least §Y150§! of §Y[Root.GetName]§!"
- son_power_to_the_ulema_title:0 "More Power to the [Root.GetClergyName]"
+ son_power_to_the_ulema_title:1 "[Root.GetPreviewColorSON]More Power to the [Root.GetClergyName][Root.GetPreviewColorSON_end]"
  son_power_to_the_ulema_desc:1 "Our [Root.GovernmentName] is heading in the direction of religious unity and enlightenment. But there are much more things to be done. The [Root.GetClergyName] manage the sacred laws of our country and oversee the conversion of the heathens, but they are limited by our government. We should grant them more freedom and privileges in order for them to advance our progress of law creation."
- son_convert_west_africa_title:0 "Convert West Africa"
+ son_convert_west_africa_title:1 "[Root.GetPreviewColorSON]Convert West Africa[Root.GetPreviewColorSON_end]"
  son_convert_west_africa_desc:0 "West Africa has always been unique when it comes to religion. When Islam established its foothold in West Africa, the upper elites converted to the true faith, but did not force it upon their subjects. In rare cases they even granted the heathen peasants rights and tolerated their behavior.\nThe time for tolerance is over though, and now these heathens should be led on the right path too."
  son_convert_west_africa_tt:0 "Every province in the §YSahel§!, §YNiger§! or §YGuinea§! region, which is NOT uncolonized, is §Y[Root.Religion.GetName]§!."
  son_build_workshops_title:0 "Construct Workshops"
@@ -1155,16 +1155,16 @@
  son_gold_of_west_africa_desc:0 "Our home region is known for its rich sources of gold. We should develop the gold mining and establish marketplaces in order to distribute the gold to the many corners of the world."
  son_dominate_west_african_trade_title:0 "Protect West African Trade"
  son_dominate_west_african_trade_desc:1 "All of West African trade shall be done under our supervision. We can't allow foreigners and rivals to find a way of exploiting the trade of our home region."
- son_guarantee_the_fetishist_title:0 "Guarantee the Old Traditions"
+ son_guarantee_the_fetishist_title:1 "[Root.GetPreviewColorSON]Guarantee the Old Traditions[Root.GetPreviewColorSON_end]"
  son_guarantee_the_fetishist_desc:0 "[Root.GetName], just like any other country in Africa, used to follow the old traditions and faith of the ancestors. While our upper class has embraced the light of Allah, our rural population still follows the pagan traditions. We should pay respect to our roots and guarantee the freedom of religion for our people."
  son_guarantee_the_fetishist_ct:0 "[Root.GetName] has at least §Y1§! Tolerance of Heathens."
- son_fetishist_alliances_title:0 "Pagan Alliances"
+ son_fetishist_alliances_title:1 "[Root.GetPreviewColorSON]Pagan Alliances[Root.GetPreviewColorSON_end]"
  son_fetishist_alliances_desc:0 "To better understand our past and our tradition it is important to learn how the heathens act. We should gather pagan allies or subjects and study their behavior."
  son_fetishist_alliances_ct:0 "Has its capital in §YAfrica§!"
- son_eliminate_other_muslims_title:0 "Protect our Legacy"
+ son_eliminate_other_muslims_title:1 "[Root.GetPreviewColorSON]Protect our Legacy[Root.GetPreviewColorSON_end]"
  son_eliminate_other_muslims_desc:0 "The Fetishist faith may be heathen to us and to the Islam, but it is an important part of our identity; our people, and as such we must protect this legacy from religious zealots who want to destroy it."
  son_eliminate_other_muslims_tt:0 "No §YFetishist§! province in §YSahel§!, §YNiger§! or §YGuinea§! is owned by a non-Fetishist country other than §Y[Root.GetName]§! and its subjects."
- son_back_to_the_roots_title:0 "Unite the Tribes"
+ son_back_to_the_roots_title:1 "[Root.GetPreviewColorSON]Unite the Tribes[Root.GetPreviewColorSON_end]"
  son_back_to_the_roots_desc:0 "Many countries which are followers of the old ways are splintered into tribes, waging wars against each other and against us, and lose their significance in the process. While the fate of these tribes is little of our concern, the traditions and history they carry with them is worth protecting and preserving. We should do their rural populations a favor and liberate them from these tribes."
  son_back_to_the_roots_ct:0 "[Root.GetName] has at least §Y3§! Tolerance of Heathens."
  son_european_gold_market_title:0 "The Market of Europe"
@@ -1229,27 +1229,27 @@
  kon_obliterate_great_power_army_tt:0 "§Y[Root.GetName]§! is the only remaining great power."
  kon_anzikus_copper_title:0 "The Makoko's Copper"
  kon_anzikus_copper_desc:1 "The king of Tyo, the so-called 'Makoko', rules over Anziku and its rich copper sources. Historically, we did not have any dispute with the people of Tyo, but their copper is of excellent quality and it is needed within our own kingdom for civil and military use. It would be beneficial if Tyo becomes an integrated part of [Root.GetName]."
- kon_collect_cults_title:0 "Meet the other Cults"
+ kon_collect_cults_title:1 "[Root.GetPreviewColorKON]Meet the other Cults[Root.GetPreviewColorKON_end]"
  kon_collect_cults_desc:0 "No religion is as diverse and complex than the religions and cults of Africa. All the tribes; all the kingdoms have different views of the cosmology of our world, yet these beliefs are rarely ever reason to fight each other. Instead we seek out the other tribes to learn more about their beliefs and even expand our own based on it."
- kon_fetishist_alliances_title:0 "Shamanistic Alliances"
+ kon_fetishist_alliances_title:1 "[Root.GetPreviewColorKON]Shamanistic Alliances[Root.GetPreviewColorKON_end]"
  kon_fetishist_alliances_desc:1 "Our religion is based on cultural exchange and tribal diplomacy. We should gather allies and subjects to improve our ability to maintain the relations between the different cults."
  kon_fetishist_alliances_tt:0 "Is §YFetishist§! and is either a §Ysubject§! or an §Yally§! of §Y[Root.GetName]§! or has an opinion of §Y150§! of §Y[Root.GetName]§!."
- kon_repel_the_missionaries_title:0 "Repel the Christians"
+ kon_repel_the_missionaries_title:1 "[Root.GetPreviewColorKON]Repel the Christians[Root.GetPreviewColorKON_end]"
  kon_repel_the_missionaries_desc:0 "Men with a very bright skin color showed up at our coasts and started spreading ideas of a man hung on a cross. At first they seemed like friendly storytellers, but then they brought the mindset of burning down our old traditions - and the people who follow them listened! We cannot allow these missionaries to continue like that!"
  kon_repel_the_missionaries_tt:1 "§Y[Root.GetName]§! will no longer be the target of foreign missionaries."
- kon_convert_west_africa_title:0 "Free the Cults"
+ kon_convert_west_africa_title:1 "[Root.GetPreviewColorKON]Free the Cults[Root.GetPreviewColorKON_end]"
  kon_convert_west_africa_desc:1 "Africa has seen the invasions through Muslims and Christians alike - both trying to eradicate our traditions and legacy and replacing them with their own ideas completely. This must end! We shall drive these zealots back to their homes and reclaim the continent for our brethren!"
  kon_convert_west_africa_bt:1 "Every settled province in the §YNiger§! and §YGuinea§! region is §YFetishist§!."
  kon_convert_west_africa_ct:0 "[Root.GetName] has decided to §YOppose§! the Europeans."
- kon_convert_the_country_title:0 "Embrace Christianity"
+ kon_convert_the_country_title:1 "[Root.GetPreviewColorKON]Embrace Christianity[Root.GetPreviewColorKON_end]"
  kon_convert_the_country_desc:0 "We have decided to side with the Europeans, but they will never see us as equal until we have embraced the light of the Lord. We must become officially Catholic and convert king and folks alike."
- kon_churches_for_the_pope_title:0 "Churches for our People"
+ kon_churches_for_the_pope_title:1 "[Root.GetPreviewColorKON]Churches for our People[Root.GetPreviewColorKON_end]"
  kon_churches_for_the_pope_desc:1 "During our time of primitive worship of nature spirits and ghosts of ancestors we had no kind of house of worship. At best, we had shrines which were maintained by a shaman.\nThese times are fortunately over, and now it is our most important task to construct churches so that everyone of our people can get in touch with the Lord."
- kon_gain_cardinal_title:0 "Cardinal for [Root.GetName]"
+ kon_gain_cardinal_title:1 "[Root.GetPreviewColorKON]Cardinal for [Root.GetName][Root.GetPreviewColorKON_end]"
  kon_gain_cardinal_desc:1 "While our people get more and more familiar with the writings of the Bible and the teachings of Christ, the catholic influence in Central Africa grows. If we want that to continue we will need an official appointed cardinal. It would be beneficial if we got into contact with the Pope or at least with one of the catholic countries with a cardinal."
  kon_gain_cardinal_at:0 "Either the §YPapal State§! or any country with a §Ycardinal§! is either §Yallied§! to [Root.GetName] or has at least §Y100§! opinion of [Root.GetName]."
  kon_gain_cardinal_bt:0 "The §YPapal State§! does NOT exist and no country has any cardinal."
- kon_spread_catholicism_title:0 "Spread the Word"
+ kon_spread_catholicism_title:1 "[Root.GetPreviewColorKON]Spread the Word[Root.GetPreviewColorKON_end]"
  kon_spread_catholicism_desc:0 "The Europeans brought diseases and unfair trade to us, but they also brought technology and advancement. But the most important good they brought was the light of the Lord. It is in the best interest for the people of Africa to receive this gift too and become part of the Catholic church."
  kon_build_navy_title:0 "[Root.GetAdjective] Navy"
  kon_build_navy_desc:1 "The world is changing. Men with pale skin and never seen armor visit our coasts and bring new ideas to our people, while other foreigners trade their goods with us. However, it is questionable if their intent is in our favor, and as such we must prepare to defend our home from these invaders from the sea by creating ships of war for ourselves."
